--- a/JenkinsFile
+++ b/JenkinsFile
@@ -142,10 +142,10 @@ def validateFile (org, objPossibleToUp, objectType, importDir){
 def updateFiles (sfdxHome, objectType, filesToUpload) {
     println ("Perapring to upload files.\nList of the files to upload: " + filesToUpload.toString())
 
-    filesToUpload.forEach { k,v ->    
-        println ("Preparing to upload file: " + k)
+    filesToUpload.each { entry ->    
+        println ("Preparing to upload file: " + entry.key)
 
-    	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${v} -f import/${k} -i Id -w 1 --json > update.json", returnStatus: true)
+    	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${entry.value} -f import/${entry.key} -i Id -w 1 --json > update.json", returnStatus: true)
         println updateStatus
         if (updateStatus==0){
         jsonUp = readJSON file: 'update.json' 
