--- a/JenkinsFile
+++ b/JenkinsFile
@@ -151,9 +151,7 @@ def validateFileSingle (org, files, objPossibleToUp, filesToUpload, objectType){
 
 
 def updateFiles (sfdxHome, objectType, filesToUpload) {
-    println ("Perapring to upload files.\nList of the files to upload:")
-    filesToUpload.each { entry -> println entry.key }
-    println "Proceeding ..."    
+    println ("Perapring to upload files.\nList of the files to upload:\n" + filesToUpload.keySet() + "\nProceeding ...")
 
     filesToUpload.each { entry ->    
         println ("Preparing to upload file: " + entry.key)
