--- a/JenkinsFile
+++ b/JenkinsFile
@@ -100,10 +100,10 @@ def validateFile (objPossibleToUp, importDir, org, objectType){
         }
 
         if (filesToUpload.size()==1){
-            println ("Found a file to upload. File name:" + filesToUpload.keySet() + "\nProceeding ...")
+            println ("Found a file to upload. File name:\n" + filesToUpload.keySet() + "\nProceeding ...")
             return filesToUpload
         } else if (filesToUpload.size()>1){
-            println ("Found files to upload. List of files that were found:" + filesToUpload.keySet() + "\nProceeding ...")
+            println ("Found files to upload. List of files that were found:\n" + filesToUpload.keySet() + "\nProceeding ...")
             return filesToUpload
         } else {
             error ("There is no file with the specified Environment and/or Object Type names.\nList of the files in the target directory:\n" + filesToUpload.toString())
