--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,16 +3,18 @@ node {
     def sfdxHome = tool 'sfdx'
     def devHubName = "${params.Environment}"
     def objectType = "${params.Object}"
-    def importDir = 'import'
     def filesToUpload
-    def objPossibleToUp = ["Account", "User"] as String[]
 
     //credential folder
     def resource = libraryResource resource: 'readFile-config.yml'
     println(resource)
     def config = readYaml text: resource
     
+    def importDir = config.core_properties[bitbucket_parameters].import_directory
+    def objPossibleToUp = config.core_properties[bitbucket_parameters].objects_possible_to_upload.split(',').collect{it as String}
 
+    println importDir
+    println objPossibleToUp.toString()   
 
 withEnv(["HOME=${env.WORKSPACE}"]){
     stage ('Validate environment'){
