--- a/resources/readFile-config.yml
+++ b/resources/readFile-config.yml
@@ -1,3 +1,7 @@
+core_properties:
+  bitbucket_parameters:
+    import_directory: "import"
+    objects_possible_to_upload: "Account,User"
 credentials:
   Env1:
     server_url: "https://curious-koala-cek3d-dev-ed.my.salesforce.com"
