--- a/JenkinsFile
+++ b/JenkinsFile
@@ -147,20 +147,21 @@ def updateFiles (sfdxHome, objectType, filesToUpload) {
 
     	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${entry.value} -f import/${entry.key} -i Id -w 1 --json > update.json", returnStatus: true)
         println updateStatus
-        if (updateStatus==0){
+
+        statusCheck(updateStatus)        
+        }
+}
+
+def statusCheck (updateStatus)) {
+    if (updateStatus==0){
         jsonUp = readJSON file: 'update.json' 
         
         def usJobId = jsonUp.result.jobId.toString().replace("]", "").replace("[", "")
         def usBatchId = jsonUp.result.id.toString().replace("]", "").replace("[", "")
-
-        println usJobId
-        println usBatchId
         
         def status = bat (returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:status -i ${usJobId} -b ${usBatchId}")
         println status
-
-        } else {
-            error (jsonUp.message)
-        }
+    } else {
+        error (jsonUp.message)
     }
 }
