--- a/JenkinsFile
+++ b/JenkinsFile
@@ -129,7 +129,7 @@ def updateFiles (sfdxHome, objectType, filesToUpload) {
         }
 }
 
-def statusCheck (status)) {
+def statusCheck (status) {
     if (status==0){
         jsonUp = readJSON file: 'update.json' 
         
